feat: update frpc-js link

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 <html lang="gb">
 <head>
     <title>Development</title>
-    <script src="https://unpkg.com/flask-rpc-js@latest/cdn.js"></script>
+    <script src="https://unpkg.com/frpc-js@latest/cdn.js"></script>
     <script>
         {# The examples below are setting and getting session cookies over fetch #}
         function set_session() {
